--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
   },
   "homepage": "https://github.com/Mr-Tonton/P7_back_geraci_tony#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
+    "mongoose-unique-validator": "^3.1.0",
+    "password-validator": "^5.3.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@types/node": "^18.7.14"
   }
 }
